--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
         - "8888:8888"
     networks:
-        - bridge
+        - my-network
  
  discovery-service:
     image: discovery-service
@@ -14,7 +14,7 @@ services:
     depends_on: 
         - config-service
     networks:
-        - bridge
+        - my-network
 
  product-service:
     image: product-service
@@ -23,5 +23,17 @@ services:
     depends_on: 
         - config-service
     networks:
-        - bridge
+        - my-network
 
+ proxy-service:
+    image: product-service
+    ports: 
+        - "8080:8080"
+    depends_on: 
+        - config-service
+    networks:
+        - my-network
+
+networks:
+    my-network:
+       driver: bridge
